@@ -137,6 +137,8 @@ are available:</p>
 
 <li><a href="backend-qmail.html">qmail</a></li>
 
+<li><a href="backend-queuedir.html">queuedir</a></li>
+
 </ul>
 
 <h2>Temporary Files</h2>
